{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 30,
  "lineage": "2db95ea8-f1d5-9f29-5af4-57c4affc72e9",
  "resources": [
    {
      "module": "module.ag-subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "24.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-ag-subnet",
            "name": "3-t-i-ag-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "3-t-i-rg",
            "virtual_network_name": "3-t-i-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.app-gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/backendAddressPools/app-gateway-beap",
                "ip_addresses": [
                  "24.0.3.4"
                ],
                "name": "app-gateway-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/backendHttpSettingsCollection/app-gateway-be-htst",
                "name": "app-gateway-be-htst",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/frontendIPConfigurations/app-gateway-feip",
                "name": "app-gateway-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/publicIPAddresses/ag--public-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/frontendPorts/app-gateway-feport",
                "name": "app-gateway-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/gatewayIPConfigurations/ag-ip-config",
                "name": "ag-ip-config",
                "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-ag-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/frontendIPConfigurations/app-gateway-feip",
                "frontend_ip_configuration_name": "app-gateway-feip",
                "frontend_port_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/frontendPorts/app-gateway-feport",
                "frontend_port_name": "app-gateway-feport",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/httpListeners/app-gateway-httplstn",
                "name": "app-gateway-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag",
            "identity": [],
            "location": "northeurope",
            "name": "3-t-i-ag",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/backendAddressPools/app-gateway-beap",
                "backend_address_pool_name": "app-gateway-beap",
                "backend_http_settings_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/backendHttpSettingsCollection/app-gateway-be-htst",
                "backend_http_settings_name": "app-gateway-be-htst",
                "http_listener_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/httpListeners/app-gateway-httplstn",
                "http_listener_name": "app-gateway-httplstn",
                "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/applicationGateways/3-t-i-ag/requestRoutingRules/app-gateway-rqrt",
                "name": "app-gateway-rqrt",
                "priority": 10,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "3-t-i-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.0"
              }
            ],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ag-subnet.azurerm_subnet.subnet",
            "module.app-gateway.azurerm_public_ip.gateway-ip",
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.frontend-vm.azurerm_network_interface.nic",
            "module.frontend-vm.azurerm_windows_virtual_machine.vm",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg",
            "module.vm-pip.azurerm_public_ip.publicip"
          ]
        }
      ]
    },
    {
      "module": "module.app-gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gateway-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/publicIPAddresses/ag--public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.133.82",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "ag--public-ip",
            "resource_group_name": "3-t-i-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.backend-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-backend-nsg",
            "location": "northeurope",
            "name": "3-t-i-backend-nsg",
            "resource_group_name": "3-t-i-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.backend-nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-backend-subnet",
            "network_security_group_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-backend-nsg",
            "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-backend-subnet"
          },
          "dependencies": [
            "module.backend-nsg.azurerm_network_security_group.nsg",
            "module.backend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.backend-subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "24.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-backend-subnet",
            "name": "3-t-i-backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "3-t-i-rg",
            "virtual_network_name": "3-t-i-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.backend-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkInterfaces/backend-vm-nic",
            "internal_domain_name_suffix": "gih3iqlchdiezeysxp3m0izskb.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "24.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "backend-vm-nic",
            "private_ip_address": "24.0.4.4",
            "private_ip_addresses": [
              "24.0.4.4"
            ],
            "resource_group_name": "3-t-i-rg"
          },
          "dependencies": [
            "module.backend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.db-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-db-nsg",
            "location": "northeurope",
            "name": "3-t-i-db-nsg",
            "resource_group_name": "3-t-i-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.db-nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-db-subnet",
            "network_security_group_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-db-nsg",
            "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-db-subnet"
          },
          "dependencies": [
            "module.db-nsg.azurerm_network_security_group.nsg",
            "module.db-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.db-subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "24.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-db-subnet",
            "name": "3-t-i-db-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "3-t-i-rg",
            "virtual_network_name": "3-t-i-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.db-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkInterfaces/db-vm-nic",
            "internal_domain_name_suffix": "gih3iqlchdiezeysxp3m0izskb.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "24.0.5.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "db-vm-nic",
            "private_ip_address": "24.0.5.4",
            "private_ip_addresses": [
              "24.0.5.4"
            ],
            "resource_group_name": "3-t-i-rg"
          },
          "dependencies": [
            "module.db-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-frontend-nsg",
            "location": "northeurope",
            "name": "3-t-i-frontend-nsg",
            "resource_group_name": "3-t-i-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-frontend-subnet",
            "network_security_group_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-frontend-nsg",
            "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-frontend-subnet"
          },
          "dependencies": [
            "module.frontend-nsg.azurerm_network_security_group.nsg",
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "24.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-frontend-subnet",
            "name": "3-t-i-frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "3-t-i-rg",
            "virtual_network_name": "3-t-i-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.frontend-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkInterfaces/frontend-vm-nic",
            "internal_domain_name_suffix": "gih3iqlchdiezeysxp3m0izskb.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "24.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/publicIPAddresses/pip-front",
                "subnet_id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet/subnets/3-t-i-frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "name": "frontend-vm-nic",
            "private_ip_address": "24.0.3.4",
            "private_ip_addresses": [
              "24.0.3.4"
            ],
            "resource_group_name": "3-t-i-rg"
          },
          "dependencies": [
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg",
            "module.vm-pip.azurerm_public_ip.publicip"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "24.0.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "41d40f32-3862-4cd0-9312-bbfacd233251",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/virtualNetworks/3-t-i-vnet",
            "location": "northeurope",
            "name": "3-t-i-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "3-t-i-rg"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-backend-rule1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "24.0.4.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-backend-nsg/securityRules/allow-frontend-to-backend",
            "name": "allow-frontend-to-backend",
            "network_security_group_name": "3-t-i-backend-nsg",
            "priority": 141,
            "protocol": "Tcp",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "24.0.3.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend-nsg.azurerm_network_security_group.nsg",
            "module.backend-subnet.azurerm_subnet.subnet",
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-backend-rule2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "24.0.4.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-backend-nsg/securityRules/allow-db-to-backend",
            "name": "allow-db-to-backend",
            "network_security_group_name": "3-t-i-backend-nsg",
            "priority": 142,
            "protocol": "Tcp",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "24.0.5.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend-nsg.azurerm_network_security_group.nsg",
            "module.backend-subnet.azurerm_subnet.subnet",
            "module.db-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-backend-rule3",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "24.0.4.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-backend-nsg/securityRules/denyall",
            "name": "denyall",
            "network_security_group_name": "3-t-i-backend-nsg",
            "priority": 151,
            "protocol": "*",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend-nsg.azurerm_network_security_group.nsg",
            "module.backend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-db-rule1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "24.0.5.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-db-nsg/securityRules/backend-to-db",
            "name": "backend-to-db",
            "network_security_group_name": "3-t-i-db-nsg",
            "priority": 143,
            "protocol": "*",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "24.0.4.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend-subnet.azurerm_subnet.subnet",
            "module.db-nsg.azurerm_network_security_group.nsg",
            "module.db-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-db-rule2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "24.0.5.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-db-nsg/securityRules/denyall",
            "name": "denyall",
            "network_security_group_name": "3-t-i-db-nsg",
            "priority": 155,
            "protocol": "*",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db-nsg.azurerm_network_security_group.nsg",
            "module.db-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-frontend-rule1",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "24.0.3.4",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-frontend-nsg/securityRules/ag-to-frontend-vm-port80",
            "name": "ag-to-frontend-vm-port80",
            "network_security_group_name": "3-t-i-frontend-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "40.85.133.82",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-gateway.azurerm_public_ip.gateway-ip",
            "module.frontend-nsg.azurerm_network_security_group.nsg",
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.frontend-vm.azurerm_network_interface.nic",
            "module.frontend-vm.azurerm_windows_virtual_machine.vm",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg",
            "module.vm-pip.azurerm_public_ip.publicip"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-frontend-rule2",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "24.0.3.4",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-frontend-nsg/securityRules/my-laptop-to-frontend-vm",
            "name": "my-laptop-to-frontend-vm",
            "network_security_group_name": "3-t-i-frontend-nsg",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "49.36.144.215",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend-nsg.azurerm_network_security_group.nsg",
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.frontend-vm.azurerm_network_interface.nic",
            "module.frontend-vm.azurerm_windows_virtual_machine.vm",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg",
            "module.vm-pip.azurerm_public_ip.publicip"
          ]
        }
      ]
    },
    {
      "module": "module.nsg-frontend-rule3",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "24.0.3.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/networkSecurityGroups/3-t-i-frontend-nsg/securityRules/denyall",
            "name": "denyall",
            "network_security_group_name": "3-t-i-frontend-nsg",
            "priority": 147,
            "protocol": "Tcp",
            "resource_group_name": "3-t-i-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend-nsg.azurerm_network_security_group.nsg",
            "module.frontend-subnet.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet",
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4d14920f-f57e-4470-8ba0-04827bfd7f03/resourceGroups/3-t-i-rg/providers/Microsoft.Network/publicIPAddresses/pip-front",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "pip-front",
            "resource_group_name": "3-t-i-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}